# ComfyUI_DiffusionModel_fp8_converter

./: README.md  __init__.py  clip_fp8_convert.py  comfyui_manager .json  exmaple_workflow.json  fp8_converter_node.py  model_fp8_converter.py  pyproject.toml
exmaple_workflow/: exampleworkflow.json
